Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P4: Low
-
Resolution: Done
-
Affects Version/s: 5.15.4
-
Fix Version/s: 6.1.2, 6.2.0 Alpha
-
Component/s: Widgets: Widgets and Dialogs
-
Labels:
-
Commits:4a23a1fbb5f2317f725fff9df2516335db1fac6c (qt/qtbase/dev) 03cb3405ae8183319be57fec1615791ff829ae4a (qt/qtbase/6.1) 0c7942f5ca6c69f5a2bc18c28aa4eae16ae87c92 (qt/tqtc-qtbase/5.15)
Description
QIntValidator::validate returns "Intermediate" for values outside of range which contradicts the documentation at https://doc.qt.io/qt-5/qvalidator.html#details (the first example).
Steps to reproduce the problem:
- Run the attached project
- Input 1114
- Watch the logged state